# MiroFish

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-ZH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: repo-hygiene.yml
app/: __init__.py  config.py
app/api/: graph.py  report.py  simulation.py
app/api/contracts/: __init__.py  graph.py  report.py  simulation.py
app/openapi/: __init__.py  builder.py  registry.py  schemas.py
app/services/: __init__.py  graph_backend.py  graphiti_entity_reader.py  graphiti_graph_builder.py  graphiti_tools.py  hash_embedder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
app/utils/: locale.py  zep_paging.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  zep_tools.py
backend/app/utils/: __init__.py  locale.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/components/: LanguageSwitcher.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
locales/: en.json  languages.json  zh.json
openapi/: openapi.json
scripts/: export_openapi.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
tests/: test_graphiti_tools.py  test_openapi.py
(+6 files in other folders)
